 * Print CUDA detection message in nvcompress.
 * Select the fastest CUDA device.
 * Compile squish with -fPIC. Fixes issue 74.
 * Fix warnings under gcc 4.3.2.
 * Fix nvzoom option typo by Frank Richter. Fixes issue 81.
 * Do not use CUDA to compress small mipmaps. Fixes issue 76.
 * Compute mipmaps of semi-transparent images correctly.
 * Shutdown CUDA properly. Fixes issue 83.

NVIDIA Texture Tools version 2.0.5
 * Fix error in single color compressor. Fixes issue 66.
 * Detect mismatch between CUDA runtime and driver, and disable CUDA in that case.
 * Fix cmake files when compiling NVTT as a shared library.
 * When linking nvtt dynamically on unix, link all libraries dynamically.
 * Select fastest CUDA device.

NVIDIA Texture Tools version 2.0.4
 * Fix error in RGB format output; reported by jonsoh. See issue 49.
 * Added support RGB format dithering by jonsoh. Fixes issue 50 and 51.
 * Prevent infinite loop in indexMirror when width equal 1. Fixes issue 65.
 * Implement general scale filter, including upsampling.

NVIDIA Texture Tools version 2.0.3
 * More accurate DXT3 compressor. Fixes issue 38.
 * Remove legacy compressors. Fix issue 34.
 * Check for single color in all compressors. Fixes issue 43.
 * Fix error in fast downsample filter, reported by Noel Llopis.

NVIDIA Texture Tools version 2.0.2
 * Fix copy ctor error reported by Richard Sim.
 * Fix indexMirror error reported by Chris Lambert.
 * Fix vc8 post build command, reported by Richard Sim.
 * Fix RGBA modes with less than 32 bpp by Viktor Linder.
 * Fix alpha decompression by Amorilia. See issue 40.
 * Avoid default-initialized constructors for POD types, reported by Jim Tilander.
 * Add single color compresor for DXT1a.
 * Set swizzle code to ATI2 files. See issue 41.

NVIDIA Texture Tools version 2.0.1
 * Fix memory leaks.
 * Pre-allocate device memory for CUDA compressor.
 * Add single color compressor. Thanks to Amir Ebrahimi.
 * Better CUDA error checking.

NVIDIA Texture Tools version 2.0.0